# hope-meter

./: .gitignore  Cargo.toml  DataContext.cs  Dockerfile  Hope.csproj  HopeCalculator.cs  Program.cs  README.md  Scrape.cs  build.sh
Controllers/: HeadlinesController.cs  HopeController.cs  WeatherForecastController.cs
Migrations/: 20231001022732_InitialCreate.Designer.cs  20231001022732_InitialCreate.cs  20231001035259_Specified.Designer.cs  20231001035259_Specified.cs  20231001193319_AddedTimeStamp.Designer.cs  20231001193319_AddedTimeStamp.cs  DataContextModelSnapshot.cs
Models/: Headline.cs  WeatherForecast.cs
Properties/: launchSettings.json
Workers/: ScrapeWorker.cs
scrape/: Cargo.toml  rss_sources.txt
scrape/src/: scrape.rs
site/: .gitignore  package.json  svelte.config.js  vite.config.ts
site/src/: app.css  app.html
site/src/routes/: +page.svelte
site/src/routes/currenthope/: +server.ts
src/: main.rs  persistance.rs  sentiment.rs
