[package]
name = "scrape"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
reqwest = "0.11.20"
rss = "2.0.6"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
vader_sentiment = { git = "https://github.com/ckw017/vader-sentiment-rust" }
